--- a/front/app.json
+++ b/front/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "HARVEST_PRO",
     "slug": "front",
     "privacy": "public",
     "sdkVersion": "36.0.0",
