servidor_web_front

--- a/front/app.json
+++ b/front/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "HARVEST_PRO",
-    "slug": "front",
+    "name": "jose",
+    "slug": "jose",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
