--- a/front/package.json
+++ b/front/package.json
@@ -8,22 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.1",
-    "@react-navigation/native": "^5.0.0",
+    "@react-native-community/masked-view": "^0.1.6",
     "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
+    "link": "^0.1.5",
+    "native-base": "^2.13.8",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-navigation": "^4.6.0",
-    "react-native-safe-area-context": "^0.7.2",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-search-filter": "^0.1.5",
-    "react-native-vector-icons": "6.6.0",
+    "react-native-screens": "^2.0.0-beta.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.1.1",
-    "react-native-screens": "2.0.0-alpha.12"
+    "react-navigation": "^4.1.0",
+    "react-navigation-stack": "^2.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
